[FIX] Body size

--- a/connectFour.html
+++ b/connectFour.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Connect Four</title>
-    <link rel="stylesheet" href="connectFour.css"> <!-- If you have CSS -->
+    <link rel="stylesheet" href="./css/connectFour.css">
 </head>
 <body>
 <div id="gameBoard" class="board" style="display:none;"></div>
 
 
 <script type="module">
-    import { initializeConnectFourGame } from './connectFour.js';
+    import { initializeConnectFourGame } from './js/connectFour.js';
     initializeConnectFourGame();
 </script>
 </body>
